crates/solidity-v2/testing/snapshots/diagnostics_output/structure/virtual_free_function/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[SyntaxError 4493] Error: Free functions cannot be virtual.
   ╭─[input.sol:5:1]
   │
 5 │ function f1() virtual {}
   │ ────────────┬───────────  
   │             ╰───────────── Error occurred here.
───╯
